Изменены файлы api.proto, user.proto и сгенерированы
On branch proto-contact
Changes to be committed:
	modified:   go.mod
	modified:   go.sum
	modified:   pkg/api/api.pb.go
	modified:   pkg/api/api.pb.gw.go
	modified:   pkg/api/api_grpc.pb.go
	modified:   pkg/api/user/user.pb.go
	modified:   proto/api.proto
	deleted:    proto/contact/contact.proto
	modified:   proto/user/user.proto
	modified:   swagger/api/api.swagger.json
